...
    <string name="map_toggle">Map</string>

    <!--Favor Published View -->
    <string name="accept_favor">Accept</string>
    <string name="favor_respond_success_msg">Favor was successfully updated</string>
    <string name="home">Home</string>
    <string name="favor_request_success_msg">Favor was successfully requested</string>
    <string name="profile">Profile</string>
    <string name="user_not_present_message">User account has been deleted</string>
    <string name="favor_worth">%d coins</string>
    <string name="posted_placeholder">Posted at: %s</string>

    <!-- Notification -->
    <string name="default_notification_channel_id" translatable="false">Default channel id</string>

    <string name="error_msg_image_request_view">Try again!</string>

    <!-- Offline mode -->
    <!-- map -->
    <string name="no_connection_message">No internet connection</string>
    <string name="offline_mode_dialog_title">Offline map support</string>
    <string name="offline_mode_instructions">You can enable offline map support by downloading offline maps from the Google Maps app</string>
    <string name="offline_mode_dialog_link">Show me how</string>
    <string name="finish_visit_marker">You have visited all nearby favors</string>

    <!-- fragment_favor_published_view view -->
    <string name="save_draft_message">Draft saved: favor will be published as soon as connection returns</string>
    <string name="favor_delete_success_msg">Favor successfully deleted</string>
    <!-- Preference Titles -->
    <string name="map_header">Map</string>
    <string name="notification_header">Notifications</string>
    <string name="help_header">Help</string>

    <!-- Account Preferences -->
...
    <string name="chat_notifications_setting_key">chat_notifications_setting_key</string>
    <string name="map_style_key">map_style</string>


    <string name="error_send_msg_chat">Error sending message</string>
    <!-- Help preferences -->
    <string name="error_database_sync">Failed fetching data</string>
    <string name="help_title">Send feedback</string>
    <string name="help_subtitle">Report technical issues or suggest new features</string>
    <string name="request_favor_draft">Save draft</string>
    <string name="edit_favor">Edit</string>
    <string name="reuse_favor">Reuse</string>
    <string name="cancel_request">Cancel</string>
    <string name="delete_favor">Delete Request</string>
    <string name="favor_cancel_success_msg">Favor successfully cancelled</string>
    <string name="favor_complete_success_msg">Favor successfully completed</string>
    <string name="update_favor_error">Failed to perform operation</string>
    <string name="illegal_request_error">Max requested favors reached. Complete or cancel active favors</string>
    <string name="illegal_accept_error">Max accepted favors reached. Complete or cancel current favor.</string>
    <string name="restart_request">Re-enable</string>
    <string name="complete_favor">Complete</string>
    <string name="old_favor_accepted_by_others">Someone commit your unmodified favor</string>
    <string name="old_favor_cancelled_by_others">Someone cancel committing your unmodified favor</string>
    <string name="committed_helpers">Potential helpers"</string>
    <string name="cancel_commit">Cancel commit</string>
    <string name="commit_favor">Commit</string>

...
