...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_request_view">

            <Button
                android:id="@+id/edit_favor_button"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_edit_24dp"
                android:text="@string/edit_favor"
                android:visibility="invisible"
                app:layout_constraintRight_toLeftOf="@id/request_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/cancel_favor_button"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/fui_transparent"
                android:drawableEnd="@drawable/ic_cancel_24dp"
                android:text="@string/cancel_request"
...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/title_request_view"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"

            android:autofillHints=""
...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/request_button" />


        <EditText
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="top|start"
            android:hint="@string/favor_details_hint"
            android:inputType="textMultiLine"
...
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details">

            <Button
                android:id="@+id/add_picture_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:drawableRight="@drawable/ic_image_24dp"
                android:text="Upload" />

            <Button
                android:id="@+id/add_camera_picture_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_photo_camera_24dp"
                android:text="Take" />

        </LinearLayout>
...
